=== 0.5 (2008-03-08)

* Merged new associations branch into trunk.

* Rewrote RDoc for associations.

* Added has_and_belongs_to_many alias for many_to_many.

* Added support for optional dataset block.

* Added :order option to order association datasets.

* Added :cache option to return and cache array of objects for association.

* Changed one_to_many, many_to_many associations to return dataset by default.

* Added has_many, belongs_to aliases.

* Refactored associations code.

* Added deprecations for old-style relations.

* Completed specs for new associations code.

* New associations code by Jeremy Evans (replaces relations code.)

=== 0.4.2 (2008-02-29)

* Fixed one_to_many implicit key to work correctly for namespaced classes (#167).

* Fixed Model.db= to affect the underlying dataset (#183).

* Fixed Model.implicit_table_name to disregard namespaces.

=== 0.4.1 (2008-02-10)

* Implemented Model#inspect (#151).

* Changed Model#method_missing to short-circuit and bypass checking #columns if the values hash already contains the relevant column (#150).

* Updated to reflect changes in sequel_core (Dataset#clone_merge renamed to Dataset#clone).

=== 0.4 (2008-02-05)

* Fixed Model#set to work with string keys (#143).

* Fixed Model.create to correctly initialize instances marked as new (#135).

* Fixed Model#initialize to convert string keys into symbol keys. This also fixes problem with validating objects initialized with string keys (#136).

=== 0.3.3 (2008-01-25)

* Finalized support for virtual attributes.

=== 0.3.2.1 (2008-01-24)

* Fixed Model.dataset to correctly set the dataset if using implicit naming or inheriting the superclass dataset (thanks celldee).

=== 0.3.2 (2008-01-24)

* Added Model#update_with_params method with support for virtual attributes and auto-filtering of unrelated parameters, and changed Model.create_with_params to support virtual attributes (#128).

* Cleaned up gem spec (#132).
