@@ -1,3 +1,7 @@
+=== SVN
+
+* Fixed Model.associate to accept class and class name in :class option.
+
 === 0.5 (2008-03-08)
 
 * Merged new associations branch into trunk.
